--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,34 @@
+# =============================================
+# Spring Boot Application Name
+# =============================================
 spring.application.name=pet-project-spring-boot
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
+# =============================================
+# JPA / Hibernate
+# =============================================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# =============================================
+# PostgreSQL Datasource
+# =============================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo-db
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# =============================================
+# HikariCP Connection Pool
+# =============================================
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 
-# Microsoft SQL Server Configuration
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pews_backend;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=aS3cr3tP@ssw0rd
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# =============================================
+# Server Port
+# =============================================
+server.port=8080
