--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,12 @@ grpc.client.myService.maxInboundMessageSize=4194304
 # Server Port
 # =============================================
 server.port=8080
+
+# =============================================
+# grpc channel
+# =============================================
+channel.authentication.host=localhost
+channel.authentication.port=6767
+
+app.constant.prefix="/api/v1"
+app.constant.xApiKey="XXX-3"
