--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <!-- ================= PROJECT INFO ================= -->
     <groupId>com.example</groupId>
-    <artifactId>pet-project-spring-boot</artifactId>
+    <artifactId>orchestrator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>pet-project-spring-boot</name>
     <description>Pet project with Spring Boot 3  Java 21</description>
@@ -103,6 +103,11 @@
             <version>1.3.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <!-- ===== LOMBOK ===== -->
 
